--- a/src/assets/data/move/config.json
+++ b/src/assets/data/move/config.json
@@ -6,15 +6,13 @@
     "section1":
       [
         "author",
-        "author",
-        "department",
-        "champion",
         "author"
+        
       ],
     "section2":
       [
-        "department",
-        "champion"
+        "department"
+       
       ],
     "section3":
       [
