--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.7",
     "@angular/material": "^7.3.2",
+    "@angular/material-moment-adapter": "^7.3.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-select/ng-select": "^2.15.3",
+    "@ngrx/effects": "^7.3.0",
+    "@ngrx/store": "^7.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
