--- a/src/assets/data/cip/config.json
+++ b/src/assets/data/cip/config.json
@@ -1,27 +1,44 @@
 {
-  "initiative": "Die Echte Initiative",
-  "title": "Torstens Echte",
-  "type": "KVP",
-  "process": {
-    "section1":
-      [
-        "author",
+  "imgpath": "CIP.LOGO.PATH",
+  "config": [{
+      "name": "CIP.CHAPTER.NAME.1",
+      "description": "CIP.CHAPTER.DESCRIPTION.1",
+      "fields": [
+        "picture_before",
+        "picture_after"
+      ]
+    },
+    {
+      "name": "CIP.CHAPTER.NAME.2",
+      "description": "CIP.CHAPTER.DESCRIPTION.2",
+      "fields": [
+        "title",
+        "problem_description",
+        "solution",
         "author",
         "department",
         "champion",
-        "author"
-      ],
-    "section2":
-      [
-        "department",
-        "champion"
-      ],
-    "section3":
-      [
-        "title",
-        "author"
+        "start_date",
+        "completion_date"
       ]
-  }
+    },
+    {
+      "name": "CIP.CHAPTER.NAME.3",
+      "description": "CIP.CHAPTER.DESCRIPTION.3",
+      "fields": [
+        "costs",
+        "savings"
+      ]
+    },
+    {
+      "name": "CIP.CHAPTER.NAME.4",
+      "description": "CIP.CHAPTER.DESCRIPTION.4",
+      "fields": [
+        "tags",
+        "methods_used",
+        "types_of_waste",
+        "comment"
+      ]
+    }
+  ]
 }
-
-
