--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/rochedesign.scss"
+              "node_modules/croppie/croppie.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -85,8 +85,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss",
-              "src/rochedesign.scss"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
