--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
     "@angular/http": "^7.2.7",
     "@angular/material": "^7.3.2",
@@ -30,9 +31,12 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
+    "croppie": "^2.6.3",
     "hammerjs": "^2.0.8",
     "load-json-file": "^5.2.0",
     "ng2-search-filter": "^0.4.7",
+    "ngx-croppie": "^1.0.1",
+    "ngx-image-cropper": "^1.3.8",
     "node": "^11.11.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
@@ -44,6 +48,7 @@
     "@angular/cli": "~7.3.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/croppie": "^2.5.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -60,6 +65,7 @@
     "rebuild-node-sass": "^1.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack": "^4.29.6"
   }
 }
