--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,35 @@
     "files.trimTrailingWhitespace": true,
     "cSpell.words": [
       "DROPDOWN",
+      "ONEIDEAFORM",
       "Queryable",
       "imgpath"
+    ],
+    "cSpell.enabledLanguageIds": [
+      "asciidoc",
+      "c",
+      "cpp",
+      "csharp",
+      "css",
+      "go",
+      "handlebars",
+      "html",
+      "jade",
+      "javascript",
+      "javascriptreact",
+      "json",
+      "latex",
+      "less",
+      "markdown",
+      "php",
+      "plaintext",
+      "pub",
+      "python",
+      "restructuredtext",
+      "rust",
+      "text",
+      "typescript",
+      "typescriptreact",
+      "yml"
     ],
 }
