--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "croppie": "^2.6.3",
     "hammerjs": "^2.0.8",
     "load-json-file": "^5.2.0",
+    "ng2-file-upload": "^1.3.0",
     "ng2-search-filter": "^0.4.7",
     "ngx-croppie": "^1.0.1",
+    "ngx-dropzone": "^1.1.2",
+    "ngx-dropzone-wrapper": "^7.2.1",
     "ngx-image-cropper": "^1.3.8",
     "node": "^11.11.0",
     "rxjs": "^6.4.0",
