--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^7.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "arraybuffer-to-string": "^1.0.2",
     "core-js": "^2.5.4",
     "croppie": "^2.6.3",
     "hammerjs": "^2.0.8",
